Add metatile structure index selector to metatile structure editor

--- a/libtales-qt/talesqtmetatilestructureeditorwidget.ui
+++ b/libtales-qt/talesqtmetatilestructureeditorwidget.ui
@@ -208,6 +208,56 @@
             </widget>
            </item>
            <item>
+            <widget class="QWidget" name="widget_6" native="true">
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>50</height>
+              </size>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_2">
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_3">
+                <item>
+                 <widget class="QLabel" name="label">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="text">
+                   <string>ID</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QComboBox" name="structureIDComboBox"/>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_4">
+                <item>
+                 <widget class="QPushButton" name="structureAddButton">
+                  <property name="text">
+                   <string>Add</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="structureRemoveButton">
+                  <property name="text">
+                   <string>Remove</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+             </layout>
+            </widget>
+           </item>
+           <item>
             <spacer name="verticalSpacer_2">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
@@ -448,7 +498,6 @@
          </spacer>
         </item>
        </layout>
-       <zorder></zorder>
        <zorder>horizontalSpacer_7</zorder>
        <zorder>horizontalSpacer_8</zorder>
       </widget>
@@ -456,10 +505,6 @@
     </layout>
    </item>
   </layout>
-  <zorder>widget_2</zorder>
-  <zorder>widget_3</zorder>
-  <zorder></zorder>
-  <zorder>widget</zorder>
  </widget>
  <customwidgets>
   <customwidget>
