--- a/libtales-qt/editorselectbar.ui
+++ b/libtales-qt/editorselectbar.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>49</width>
+    <width>34</width>
     <height>385</height>
    </rect>
   </property>
@@ -96,6 +96,19 @@
      <property name="icon">
       <iconset resource="resources.qrc">
        <normaloff>:/resources/palettecycleicon.png</normaloff>:/resources/palettecycleicon.png</iconset>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QToolButton" name="tileMapButton">
+     <property name="toolTip">
+      <string>Hacks and enhancements</string>
+     </property>
+     <property name="text">
+      <string>T</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
