--- a/libtales-qt/subtileeditorwidget.ui
+++ b/libtales-qt/subtileeditorwidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>159</width>
-    <height>142</height>
+    <width>165</width>
+    <height>148</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -60,22 +60,24 @@
        </widget>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_18">
-        <item>
-         <widget class="QCheckBox" name="ulHFlipBox">
-          <property name="text">
-           <string>H flip</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QCheckBox" name="ulVFlipBox">
-          <property name="text">
-           <string>V flip</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <widget class="QWidget" name="flipWidget" native="true">
+        <layout class="QVBoxLayout" name="verticalLayout_4">
+         <item>
+          <widget class="QCheckBox" name="ulHFlipBox">
+           <property name="text">
+            <string>H flip</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="ulVFlipBox">
+           <property name="text">
+            <string>V flip</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -83,7 +85,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QWidget" name="widget" native="true">
+      <widget class="QWidget" name="priorityWidget" native="true">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -109,7 +111,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QWidget" name="widget_2" native="true">
+      <widget class="QWidget" name="paletteWidget" native="true">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>0</horstretch>
