Add resource export dialog, and total object counter to level editor

--- a/libtales-qt/talesqtleveleditorwidget.ui
+++ b/libtales-qt/talesqtleveleditorwidget.ui
@@ -265,6 +265,12 @@
         <layout class="QHBoxLayout" name="horizontalLayout_6">
          <item>
           <widget class="QLabel" name="label_2">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
             <string>Map objects: </string>
            </property>
