Implement basic 4bpp graphic export functionality

--- a/libtales-qt/talesqtgraphicseditorwidget.ui
+++ b/libtales-qt/talesqtgraphicseditorwidget.ui
@@ -248,6 +248,13 @@
          </widget>
         </item>
         <item>
+         <widget class="QPushButton" name="exportButton">
+          <property name="text">
+           <string>Export</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
