--- a/libtales-qt/talesqtgraphicseditorwidget.ui
+++ b/libtales-qt/talesqtgraphicseditorwidget.ui
@@ -250,7 +250,14 @@
         <item>
          <widget class="QPushButton" name="exportButton">
           <property name="text">
-           <string>Export</string>
+           <string>Export...</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="importButton">
+          <property name="text">
+           <string>Import...</string>
           </property>
          </widget>
         </item>
